# chess

./: Cargo.toml  README.md  index.html
public/: chess.js
src/: board.rs  chess.d.ts  chess_bg.wasm.d.ts  components.rs  constants.rs  control.rs  input.rs  lib.rs  main.rs  movement.rs  resources.rs  systems.rs  ui.rs
src/board/: logic.rs  mod.rs  spawning.rs
