[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# Change the debug level to 3 to make it run faster 
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_pixel_camera = "0.2.1"